# QUANTICS_AiiDA_Complete_Installation_Usage_Guide

./: INSTALL.md  LICENSE  QUANTICS_AiiDA_Complete_Installation_Usage_Guide.md  README.md  pyproject.toml  quantics_aiida_integration.py  quantics_env.sh  quantics_gui.py  quantics_gui_aiida.py  quantics_local_runner.py  requirements-aiida.txt  requirements-dev.txt  requirements.txt  setup.py
docs/: QUANTICS_AiiDA_Complete_Installation_Usage_Guide.md  QUANTICS_AiiDA_完整安装使用指南.md
examples/: quick_start_guide.md
examples/example_inputs/: double_well.inp  double_well.op
src/: __init__.py
src/gui/: __init__.py  main_window.py
src/runners/: __init__.py  aiida_integration.py  local_runner.py
src/utils/: __init__.py  argument_parser.py  config.py
tests/: __init__.py  test_argument_parser.py  test_config.py
